--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 
 <body>
 <a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a></b>
+  <a href="RarityModRP.mcpack" download="RarityModRP.mcpack">Rarity Mod RP.</a></b>
+  <a href="RarityModBP.mcpack" download="RarityModBP.mcpack">Rarity Mod BP.</a></b>
 </body>
 </html>
