--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a></b>
   <a href="RarityModRP.mcpack" download="RarityModRP.mcpack">Rarity Mod RP.</a></b>
   <a href="RarityModBP.mcpack" download="RarityModBP.mcpack">Rarity Mod BP.</a></b>
+  <a href="ItemEditor.mcpack" download="ItemEditor.mcpack">Item Editior.</a></b>
 </body>
 </html>
