--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <a href="Trade System v1.5.0 [1.21.80x].mcaddon" download="Trade System v1.5.0 [1.21.80x].mcaddon">Trade System".</a></b>
   <a href="Minecraft Essentials v2.16.2 [1.21.90x].mcaddon" download="Minecraft Essentials v2.16.2 [1.21.90x].mcaddon">Server Essentials.</a></b>
   <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a></b>
+   <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a></b>
 </body>
 </html>
