--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <a href="RarityModRP.mcpack" download="RarityModRP.mcpack">Rarity Mod RP.</a></b>
   <a href="RarityModBP.mcpack" download="RarityModBP.mcpack">Rarity Mod BP.</a></b>
   <a href="ItemEditor.mcpack" download="ItemEditor.mcpack">Item Editior.</a></b>
-  <a href="Trade System v1.5.0 [1.21.80x].mcaddon" download="Trade System v1.5.0 [1.21.80x].mcaddon">Trade System".</a></b>
-  <a href="Minecraft Essentials v2.16.2 [1.21.90x].mcaddon" download="Minecraft Essentials v2.16.2 [1.21.90x].mcaddon">Server Essentials.</a></b>
   <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a></b>
    <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a></b>
+  <a href="MyCommandsPack.mcpack" download="MyCommandsPack.mcpack">MyCommandsPack.</a></b>
 </body>
 </html>
