--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <a href="ItemEditor.mcpack" download="ItemEditor.mcpack">Item Editior.</a></b>
   <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a></b>
    <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a></b>
-  <a href="MyCommandsPack.mcpack" download="MyCommandsPack.mcpack">MyCommandsPack.</a></b>
+  <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a></b>
+  <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">SplashText.</a></b>
 </body>
 </html>
