--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
 <title>Minecraft Mods</title>
+  <h1>Mods Website</h1><br>
+  <p>A website to get Minecraft mods!</p><br>
 
 <body>
-<a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a></b>
-  <a href="RarityModRP.mcpack" download="RarityModRP.mcpack">Rarity Mod RP.</a></b>
-  <a href="RarityModBP.mcpack" download="RarityModBP.mcpack">Rarity Mod BP.</a></b>
+<a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a><br>
+  <a href="RarityModRP.mcpack" download="RarityModRP.mcpack">Rarity Mod RP.</a><br>
+  <a href="RarityModBP.mcpack" download="RarityModBP.mcpack">Rarity Mod BP.</a><br>
   <a href="ItemEditor.mcpack" download="ItemEditor.mcpack">Item Editior.</a></b>
-  <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a></b>
-   <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a></b>
-  <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a></b>
-  <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">SplashText.</a></b>
+  <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a><br>
+  <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a><br>
+  <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a><br>
+  <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">SplashText.</a><br>
 </body>
 </html>
