--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a><br>
   <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a><br>
   <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">SplashText.</a><br>
+  <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish (edited).</a><br>
 </body>
 </html>
