--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>Minecraft Mods</title>
   <h1>Mods Website</h1><br>
-  <p>A website to get Minecraft mods!</p><br>
+  <p>A website to get Minecraft mods on console!</p><br>
 
 <body>
 <a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a><br>
