--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a href="CustomMusicContainer.mcpack" download="CustomMusicContainer.mcpack">Music+ Custom Songs.</a><br>
   <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a><br>
   <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a><br>
-  <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">SplashText.</a><br>
+  <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">Custom Splash Text.</a><br>
+  <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions.</a><br>
 </body>
 </html>
