--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a><br>
   <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">Custom Splash Text.</a><br>
   <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions.</a><br>
+  <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
 </body>
 </html>
