--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="Radium's Armament.zip" download="Radium's Armament.zip">Radium's Armament.</a><br>
   <a href="LightningsTotem.mcpack" download="LightningsTotem.mcpack">LightningsTotem.</a><br>
   <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">Custom Splash Text.</a><br>
-  <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions.</a><br>
+  <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions v1.3.</a><br>
   <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
 </body>
 </html>
