--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <a href="LightningsSplashText.mcpack" download="LightningsSplashText.mcpack">Custom Splash Text.</a><br>
   <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions v1.3.</a><br>
   <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
+  <a href="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" download="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon">Essentials 1.21.110x.</a><br>
 </body>
 </html>
