--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>Minecraft Mods</title>
   <h1>Mods Website</h1><br>
-  <p>A website to get Minecraft mods on console!</p><br>
+  <p>A website to get Minecraft mods on console! THIS WEBSITE IS A WORK IN PROGRESS!</p><br>
 
 <body>
 <a href="RPGModPack.zip" download="RPGModPack.zip">RPG Mods.</a><br>
@@ -15,6 +15,6 @@
   <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions v1.3.</a><br>
   <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
   <a href="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" download="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon">Essentials 1.21.110x.</a><br>
-  <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template (COMING SOON).</a><br>
+  <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template.</a><br>
 </body>
 </html>
