--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <a href="EternalFunctions.mcpack" download="EternalFunctions.mcpack">Eternal Functions v1.3.</a><br>
   <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
   <a href="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" download="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon">Essentials 1.21.110x.</a><br>
-  <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template.</a><br>
+  <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template (scripting is hard ; _ ;).</a><br>
 </body>
 </html>
