--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <a href="UltraVanish.mcaddon" download="UltraVanish.mcaddon">UltraVanish.</a><br>
   <a href="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" download="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon">Essentials 1.21.110x.</a><br>
   <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template (scripting is hard ; _ ;).</a><br>
+  <a href="EternalSounds.mcpack" download="EternalSounds.mcpack">Eternal Sounds.</a><br>
 </body>
 </html>
