--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <a href="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" download="Minecraft Essentials v2.18.0 [1.21.110x].mcaddon">Essentials 1.21.110x.</a><br>
   <a href="CustomCommandsTemplate.mcpack" download="CustomCommandsTemplate.mcpack">Custom Commands Template (scripting is hard ; _ ;).</a><br>
   <a href="EternalSounds.mcpack" download="EternalSounds.mcpack">Eternal Sounds.</a><br>
+  <a href="CopyInventory.mcpack" download="CopyInventory.mcpack">Copy Inventory.</a><br>
 </body>
 </html>
