--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Minecraft Mods</title>
+  <title>Minecraft Mod Hub</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -33,7 +33,7 @@
   <div id="side-panel-overlay"></div>
   
   <header id="home">
-    <h1>Minecraft Mod Hub</h1>
+    <h1>Welcome to Lightning's Minecraft Mod Hub!</h1>
     <nav>
       <button class="nav-btn" data-scroll="home">Home</button>
       <button class="nav-btn" data-scroll="mods">Mods</button>
@@ -104,4 +104,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
