Add 'All-In-One Combat' mod to the mods section
Added a new mod section for 'All-In-One Combat' with a download link.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
     <p><b>(OG)</b> Start creating your own custom Minecraft commands!</p>
     <a href="mods/CustomCommandsTemplate.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
+  <div class="card">
+    <h3>All-In-One Combat</h3>
+    <p>A single resource pack containing multiple other resource packs for PvP!</p>
+    <a href="mods/All-In-One Combat.mcpack" class="nav-btn" download target="_blank">Download</a>
+  </div>
 </section>
   </main>
 
@@ -106,3 +111,4 @@
 </body>
 
 </html>
+
