Update mod information and version in index.html
Updated the Minecraft Mod Hub page with new mod information and corrected the version of 'Minecraft Essentials'.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <a href="mods/LightningsTotem.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
   <div class="card">
-    <h3>Minecraft Essentials v2.18.0 [1.21.110x]</h3>
-    <p>Must-have pack for Minecraft Bedrock 1.21.110x!</p>
+    <h3>Minecraft Essentials v2.19.0 [1.21.120x]</h3>
+    <p>Must-have pack for Minecraft Bedrock servers!</p>
     <a href="mods/Minecraft Essentials v2.18.0 [1.21.110x].mcaddon" class="nav-btn" download target="_blank">Download</a>
   </div>
   <div class="card">
@@ -111,4 +111,5 @@
 </body>
 
 </html>
+
 
