Mark Eternal Sounds and Copy Inventory as W.I.P
Updated the Eternal Sounds and Copy Inventory sections to indicate they are works in progress (W.I.P).

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <a href="mods/EternalFunctions.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
   <div class="card">
-    <h3>Eternal Sounds</h3>
+    <h3>Eternal Sounds <b>(W.I.P)</b></h3>
     <p><b>(OG)</b> Custom sounds for Eternal Minecraft worlds.</p>
     <a href="mods/EternalSounds.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
@@ -86,12 +86,12 @@
     <a href="mods/UltraVanish.mcaddon" class="nav-btn" download target="_blank">Download</a>
   </div>
   <div class="card">
-    <h3>Copy Inventory</h3>
+    <h3>Copy Inventory <b>(W.I.P)</b></h3>
     <p><b>(OG)</b> Tool to copy inventories into chests.</p>
     <a href="mods/CopyInventory.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
   <div class="card">
-    <h3>Custom Commands Template</h3>
+    <h3>Custom Commands Template <b>(W.I.P)</b></h3>
     <p><b>(OG)</b> Start creating your own custom Minecraft commands!</p>
     <a href="mods/CustomCommandsTemplate.mcpack" class="nav-btn" download target="_blank">Download</a>
   </div>
@@ -111,6 +111,7 @@
 </body>
 
 </html>
+
 
 
 
