Add 'Some rights reserved.' to footer
Updated the footer to include 'Some rights reserved.'

--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 LightningEX. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.</p>
+    <p>&copy; 2025 LightningEX. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Some rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 
 </html>
+
