--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 LightningEX. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Some rights reserved.</p>
+    <p>&copy; 2025 LightningEX. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 
 </html>
+
 
